@@ -664,25 +664,19 @@ error_message_with_parent (GtkWindow  *parent,
   gtk_widget_destroy (dialog);
 }
 
-/* Returns a toplevel GtkWindow, or NULL if none */
-static GtkWindow *
-get_toplevel (GtkWidget *widget)
-{
-  GtkWidget *toplevel;
-
-  toplevel = gtk_widget_get_toplevel (widget);
-  if (!GTK_WIDGET_TOPLEVEL (toplevel))
-    return NULL;
-  else
-    return GTK_WINDOW (toplevel);
-}
-
 /* Shows an error dialog for the file chooser */
 static void
 error_message (GtkFileChooserDefault *impl,
 	       const char            *msg)
 {
-  error_message_with_parent (get_toplevel (GTK_WIDGET (impl)), msg);
+  GtkWidget *toplevel;
+
+  toplevel = gtk_widget_get_toplevel (GTK_WIDGET (impl));
+  if (!GTK_WIDGET_TOPLEVEL (toplevel))
+    toplevel = NULL;
+
+  error_message_with_parent (toplevel ? GTK_WINDOW (toplevel) : NULL,
+			     msg);
 }
 
 /* Shows a simple error dialog relative to a path.  Frees the GError as well. */
@@ -2562,15 +2556,21 @@ trap_activate_cb (GtkWidget   *widget,
       || event->keyval == GDK_KP_Enter
       || event->keyval == GDK_space)
     {
-      GtkWindow *window;
+      GtkWidget *toplevel;
 
-      window = get_toplevel (widget);
-      if (window
-	  && widget != window->default_widget
-	  && !(widget == window->focus_widget &&
-	       (!window->default_widget || !GTK_WIDGET_SENSITIVE (window->default_widget))))
-	gtk_window_activate_default (window);
+      toplevel = gtk_widget_get_toplevel (widget);
+      if (GTK_IS_WINDOW (toplevel))
+	{
+	  GtkWindow *window;
 
+	  window = GTK_WINDOW (toplevel);
+
+	  if (window &&
+	      widget != window->default_widget &&
+	      !(widget == window->focus_widget &&
+		(!window->default_widget || !GTK_WIDGET_SENSITIVE (window->default_widget))))
+	    gtk_window_activate_default (window);
+	}
       return TRUE;
     }
   return FALSE;
@@ -3602,40 +3602,6 @@ list_sort_column_changed_cb (GtkTreeSortable       *sortable,
     impl->list_sort_ascending = (sort_type == GTK_SORT_ASCENDING);
 }
 
-static void
-set_busy_cursor (GtkFileChooserDefault *impl,
-		 gboolean               busy)
-{
-  GtkWindow *toplevel;
-  GdkDisplay *display;
-  GdkCursor *cursor;
-
-  toplevel = get_toplevel (GTK_WIDGET (impl));
-  if (!toplevel || !GTK_WIDGET_REALIZED (toplevel))
-    return;
-
-  display = gtk_widget_get_display (GTK_WIDGET (toplevel));
-
-  if (busy)
-    cursor = gdk_cursor_new_for_display (display, GDK_WATCH);
-  else
-    cursor = NULL;
-
-  gdk_window_set_cursor (GTK_WIDGET (toplevel)->window, cursor);
-  gdk_display_flush (display);
-
-  if (cursor)
-    gdk_cursor_unref (cursor);
-}
-
-/* Callback used when the file system model finishes loading */
-static void
-browse_files_model_finished_loading_cb (GtkFileSystemModel    *model,
-					GtkFileChooserDefault *impl)
-{
-  set_busy_cursor (impl, FALSE);
-}
-
 /* Gets rid of the old list model and creates a new one for the current folder */
 static void
 set_list_model (GtkFileChooserDefault *impl)
@@ -3646,14 +3612,9 @@ set_list_model (GtkFileChooserDefault *impl)
       g_object_unref (impl->sort_model);
     }
 
-  set_busy_cursor (impl, TRUE);
-
   impl->browse_files_model = _gtk_file_system_model_new (impl->file_system,
 							 impl->current_folder, 0,
 							 GTK_FILE_INFO_ALL);
-  g_signal_connect (impl->browse_files_model, "finished-loading",
-		    G_CALLBACK (browse_files_model_finished_loading_cb), impl);
-
   _gtk_file_system_model_set_show_hidden (impl->browse_files_model, impl->show_hidden);
   switch (impl->action)
     {
@@ -5036,7 +4997,7 @@ static void
 location_popup_handler (GtkFileChooserDefault *impl)
 {
   GtkWidget *dialog;
-  GtkWindow *toplevel;
+  GtkWidget *toplevel;
   GtkWidget *hbox;
   GtkWidget *label;
   GtkWidget *entry;
@@ -5045,7 +5006,9 @@ location_popup_handler (GtkFileChooserDefault *impl)
 
   /* Create dialog */
 
-  toplevel = get_toplevel (GTK_WIDGET (impl));
+  toplevel = gtk_widget_get_toplevel (GTK_WIDGET (impl));
+  if (!GTK_WIDGET_TOPLEVEL (toplevel))
+    toplevel = NULL;
 
   if (impl->action == GTK_FILE_CHOOSER_ACTION_OPEN
       || impl->action == GTK_FILE_CHOOSER_ACTION_SELECT_FOLDER)
@@ -5060,7 +5023,7 @@ location_popup_handler (GtkFileChooserDefault *impl)
     }
 
   dialog = gtk_dialog_new_with_buttons (title,
-					toplevel,
+					GTK_WINDOW (toplevel),
 					GTK_DIALOG_MODAL | GTK_DIALOG_DESTROY_WITH_PARENT | GTK_DIALOG_NO_SEPARATOR,
 					GTK_STOCK_CANCEL, GTK_RESPONSE_CANCEL,
 					GTK_STOCK_OPEN, GTK_RESPONSE_ACCEPT,
@@ -5108,11 +5071,11 @@ location_popup_handler (GtkFileChooserDefault *impl)
 
   if (refocus)
     {
-      GtkWindow *toplevel;
+      GtkWidget *toplevel;
 
-      toplevel = get_toplevel (GTK_WIDGET (impl));
-      if (toplevel && toplevel->focus_widget)
-	gtk_widget_grab_focus (toplevel->focus_widget);
+      toplevel = gtk_widget_get_toplevel (GTK_WIDGET (impl));
+      if (GTK_WIDGET_TOPLEVEL (toplevel) && GTK_WINDOW (toplevel)->focus_widget)
+	gtk_widget_grab_focus (GTK_WINDOW (toplevel)->focus_widget);
     }
 
   gtk_widget_destroy (dialog);
